# crync

./: Cargo.toml  test.sh
src/: encoding.rs  main.rs  opt.rs  run.rs
