[package]
name = "crync"
version = "0.1.0"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"

[dependencies]
crust = { git = "https://github.com/maidsafe/crust.git" }
safe_crypto = "0.5.0"
serde_json = "1"
maidsafe_utilities = "0.17.0"
structopt = "0.2.15"
hex = "0.3.2"
rust_sodium = "0.10.2"
